--- a/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventSrvice.csproj
+++ b/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventSrvice.csproj
@@ -127,11 +127,15 @@
     <Compile Include="Consumers\UserPasswordRecoveryAppEventConsumer.cs" />
     <Compile Include="Consumers\RequestDeedlineAppEventConsumer.cs" />
     <Compile Include="Consumers\UserRegisterAppEventConsumer.cs" />
+    <Compile Include="DTO\UserPasswordRecoveryAppEventSubscribeDTO.cs" />
     <Compile Include="DTO\UserEventSubscribeDTO.cs" />
+    <Compile Include="DTO\UserDeedlineAppEventSubscribeDTO.cs" />
+    <Compile Include="DTO\UserRequestAppEventSubscribeDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Consumers\RequestAppEventConsumer.cs" />
-    <Compile Include="Query\RequestLastEventQuery.cs" />
+    <Compile Include="Query\UserRequestDeedlineAppEventSubscribeQuery.cs" />
+    <Compile Include="Query\UserRequestAppEventSubscribeQuery.cs" />
     <Compile Include="RequestService.cs" />
     <Compile Include="Sender\EmailSender.cs" />
     <Compile Include="Sender\ISender.cs" />
