--- a/Services/HelpDesk.ConsumerEventSrvice/packages.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/packages.config
@@ -5,10 +5,15 @@
   <package id="MassTransit" version="3.5.7" targetFramework="net461" />
   <package id="MassTransit.Log4Net" version="3.5.7" targetFramework="net461" />
   <package id="MassTransit.RabbitMQ" version="3.5.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="NewId" version="3.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net461" />
+  <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
   <package id="Topshelf" version="4.0.3" targetFramework="net461" />
   <package id="Topshelf.Log4Net" version="4.0.3" targetFramework="net461" />
   <package id="Unity" version="5.3.1" targetFramework="net461" />
