--- a/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventSrvice.csproj
+++ b/Services/HelpDesk.ConsumerEventSrvice/HelpDesk.ConsumerEventSrvice.csproj
@@ -164,6 +164,8 @@
     <Compile Include="DTO\UserEventSubscribeDTO.cs" />
     <Compile Include="DTO\UserDeedlineAppEventSubscribeDTO.cs" />
     <Compile Include="DTO\UserRequestAppEventSubscribeDTO.cs" />
+    <Compile Include="EmailTemplateServices\RazorEmailTemplateService.cs" />
+    <Compile Include="EmailTemplateServices\IEmailTemplateService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Consumers\RequestAppEventConsumer.cs" />
@@ -181,6 +183,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="EmailTemplates\RequestDeedlineAppEvent.cshtml" />
+    <None Include="EmailTemplates\UserPasswordRecoveryAppEvent.cshtml" />
+    <None Include="EmailTemplates\UserRegisterAppEvent.cshtml" />
     <None Include="EmailTemplates\RequestAppEvent.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.config" />
@@ -216,6 +221,7 @@
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
