--- a/Services/HelpDesk.ConsumerEventSrvice/Web.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/Web.config
@@ -20,16 +20,7 @@ to "Copy if newer" so that it gets deployed alongside the executable.
 
     <system.web.webPages.razor>
         <!-- Tell the Visual Studio editor to use RazorEngine's base class for the Razor intellisense instead of defaulting to ASP.NET MVC's WebViewPage base class  -->
-        <pages pageBaseType="RazorEngine.Templating.TemplateBase, RazorEngine">
-            <!-- List of namespaces that we want RazorEngine to always include in the generated template classes. 
-            We'll configure our TemplateService instance with all the namespaces in this list.
-            This list is also used by the Visual Studio editor to know about the default namespaces we've configured our instance of TemplateService 
-            to use so that it doesn't complain about unknown types or missing namespaces.
-            -->
-            <namespaces>
-                <add namespace="ConsoleApplication.Models" />
-            </namespaces>
-        </pages>
+        <pages pageBaseType="RazorEngine.Templating.TemplateBase, RazorEngine"></pages>
     </system.web.webPages.razor>
 
     <!-- This is necessary to stop the Visual Studio editor from throwing the "ASP.NET runtime error: There is no build provider registered for the extension '.cshtml'." error -->
