--- a/Data/HelpDesk.Data/HelpDesk.Data.csproj
+++ b/Data/HelpDesk.Data/HelpDesk.Data.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Specification\ExpressionExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
