--- a/HelpDesk.Common/packages.config
+++ b/HelpDesk.Common/packages.config
@@ -1,11 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="ServiceStack.Common" version="5.0.2" targetFramework="net461" />
-  <package id="ServiceStack.Interfaces" version="5.0.2" targetFramework="net461" />
-  <package id="ServiceStack.Redis" version="5.0.2" targetFramework="net461" />
-  <package id="ServiceStack.Text" version="5.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Pipelines.Sockets.Unofficial" version="1.0.0" targetFramework="net461" />
+  <package id="StackExchange.Redis" version="2.0.505" targetFramework="net461" />
+  <package id="StackExchange.Redis.Extensions.Core" version="3.5.0" targetFramework="net461" />
+  <package id="StackExchange.Redis.Extensions.Newtonsoft" version="3.5.0" targetFramework="net461" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.6" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Diagnostics.PerformanceCounter" version="4.5.0" targetFramework="net461" />
+  <package id="System.IO.Pipelines" version="4.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Channels" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net461" />
   <package id="Unity" version="5.3.1" targetFramework="net461" />
   <package id="Unity.Abstractions" version="2.3.0" targetFramework="net461" />
   <package id="Unity.Interception" version="5.0.7" targetFramework="net461" />
